<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".pillreminer">

    <EditText
        android:id="@+id/etPillname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/pill_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/hour_minute"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetInTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"

            android:text="@string/start_time" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:text="@string/hour_minute"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSetDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/Set_duration" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"

        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/buttons"
        android:text="ADD"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/btntraker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"

        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/buttons"
        android:text="Show and Edit notifications"
        android:textStyle="bold"
        android:typeface="normal" />
    <Button
        android:id="@+id/btntAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"

        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/buttons"
        android:text="@string/Add"
        android:textStyle="bold"
        android:visibility="gone"
        android:typeface="normal" />



</LinearLayout>